Fix scrollbar colors and add link to logo

--- a/app/assets/stylesheets/styles/playlists.scss
+++ b/app/assets/stylesheets/styles/playlists.scss
@@ -9,6 +9,7 @@
   display: flex;
   flex-wrap: nowrap;
   overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 #playlist-form {
