--- a/app/assets/stylesheets/styles/web_player.scss
+++ b/app/assets/stylesheets/styles/web_player.scss
@@ -3,8 +3,6 @@
   height: 100vh;
   min-width: 1000px;
   min-height: 600px;
-  overflow-x: scroll;
-  overflow-y: scroll;
   position: absolute;
   display: flex;
   flex-direction: row;
@@ -16,6 +14,7 @@
   display: flex;
   flex-direction: column;
   padding: 0 15px;
+  overflow: hidden;
   overflow-y: scroll;
 }
 
@@ -25,4 +24,28 @@
 
 .now-playing-active {
   width: calc(100% - 360px);
+}
+
+::-webkit-scrollbar {
+  background: $dark-grey;
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  background: $dark-grey;
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 10px;
+  border-radius: 10px;
+  background: $medium-grey;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+}
+
+::-webkit-scrollbar-corner {
+  background: $dark-grey;
 }
